# Lottttto15

./: README.md  build.gradle.kts  gradle.properties  gradlew  lotto.py  main.py  settings.gradle.kts
.github/workflows/: build-apk.yml  main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  miningcore.cpp  native-lib.cpp
app/src/main/java/com/example/lottttto11/: App.kt  MainActivity.kt
app/src/main/java/com/example/lottttto11/config/: FeeAddresses.kt
app/src/main/java/com/example/lottttto11/data/: BlockReward.kt  Coin.kt  Converters.kt  DatabaseProvider.kt  Fee.kt  FeeDao.kt  MergedMiningData.kt  MiningSession.kt  User.kt  UserDao.kt  UserDatabase.kt  Wallet.kt  WalletDao.kt
app/src/main/java/com/example/lottttto11/mining/: MergedMiningEngine.kt  MiningMode.kt  MiningService.kt  NativeMiner.kt  StratumClient.kt
app/src/main/java/com/example/lottttto11/ui/theme/: Theme.kt
app/src/main/java/com/example/lottttto11/utils/: FileUtils.kt  NotificationHelper.kt  PowerManagerHelper.kt  ValidationUtils.kt  ZipHelper.kt
app/src/main/java/com/example/lottttto11/viewmodel/: AuthViewModel.kt  AuthViewModelFactory.kt  DashboardViewModel.kt  MiningViewModel.kt  MiningViewModelFactory.kt  StatisticsViewModel.kt  StatisticsViewModelFactory.kt  SubscriptionViewModel.kt  SubscriptionViewModelFactory.kt  WalletViewModel.kt  WalletViewModelFactory.kt
app/src/main/java/com/example/lottttto11/wallet/: WalletGenerator.kt
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
tests/: test_lotto.py
(+13 files in other folders)
